Revert "Fixed z-indexes on navbar"
This reverts commit 5e2df34a913fb7a5ef55f0a09c960131697f4c90.

--- a/docroot/themes/iucn_who/less/component/navbar.less
+++ b/docroot/themes/iucn_who/less/component/navbar.less
@@ -35,7 +35,7 @@ body {
           position: fixed;
         }
         header {
-          z-index: @zindex-modal-background + 1;
+          z-index: @zindex-modal-background;
         }
       }
       // Default toolbar fixed height value.
@@ -107,7 +107,7 @@ body.navbar-is-static-top {
   }
   @media @grid-mobile {
     position: fixed;
-    z-index: @zindex-modal-background + 1;
+    z-index: @zindex-modal-background;
     right: 0;
     left: 0;
     height: @navbar-height--mobile;
